# ai-running-coach

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROMPTS.md  README.md  SPEC.md  docker-compose.yml  package-lock.json
backend/: .env.example  cleanup_and_fix.py  debug_empty_metrics.py  debug_generation.py  debug_mock.py  debug_parallel.py  debug_streams.py  fetch_latest_streams.py  pyproject.toml  test_api.py  test_mock_client.py
backend/alembic/: env.py
backend/alembic/versions/: 20240201_001_initial.py  3bf573caa922_add_profile_fields.py  440e584910ff_add_efficiency_analysis.py  5704ab8678d6_add_interval_structure_to_derived_.py  72c36fcd8e76_add_risk_columns_to_derived_metrics.py  9992dd1d047a_add_workout_match_interval_kpis_max_hr_.py  (+7 more)
backend/app/: main.py  models.py  schemas.py  worker.py
backend/running_coach_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_integration.py  test_analysis.py  test_api_verdict_v3.py  test_chat.py  test_coach_context.py  test_coach_schema.py  test_coaching.py  test_context_builder.py  test_context_pack.py  test_context_pack_signals.py  test_context_slicers.py  test_debug_fields.py  test_demo.py  test_intervals.py  test_models.py  test_playbooks.py  test_policy_validator.py  test_profile.py  test_risk.py  test_schemas_v3_split.py  test_strava_auth.py  test_stream_metrics.py  test_sync_integration.py  test_units_cadence.py  test_v3_cache.py  test_v3_cadence_regression.py  test_v3_generators.py  test_v3_prompts.py  test_v3_safety.py  test_webhooks.py  test_workout_matching.py
(+125 files in other folders)
