[project]
name = "running-coach-backend"
version = "0.1.0"
description = "Running Coach Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
    "anthropic>=0.40.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
